--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: ПочитайКлаб
 description: Поможем. Посоветуем. Покажем.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/vbg.png
+avatar: /images/poch.png
 
 #
 # Flags below are optional
